@@ -106,7 +106,6 @@ otherlibs/win32unix/stat.c        typo.long-line
 otherlibs/win32unix/symlink.c     typo.long-line
 
 runtime/sak.c            typo.non-ascii
-runtime/caml/compatibility.h    typo.very-long-line
 
 stdlib/hashbang     typo.white-at-eol typo.missing-lf
 
@@ -185,7 +184,6 @@ tools/ocaml-objcopy-macosx text eol=lf
 tools/ocamlsize text eol=lf
 tools/pre-commit-githook text eol=lf
 tools/markdown-add-pr-links.sh text eol=lf
-runtime/caml/compatibility.h typo.long-line=may
 runtime/caml/sizeclasses.h typo.missing-header typo.white-at-eol
 
 # These are all Perl scripts, so may not actually require this
