@@ -1,4 +1,3 @@
-#define CAML_NAME_SPACE
 #define CAML_INTERNALS
 
 #include <caml/mlvalues.h>
